<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cloisim_ros_elevator_system</name>
  <version>4.8.0</version>
  <description>elevator system for simulation</description>
  <maintainer email="sungkyu.kang@lge.com">Sungkyu Kang</maintainer>
  <maintainer email="hyunseok7.yang@lge.com">Hyunseok Yang</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>elevator_system_msgs</build_depend>
  <depend>cloisim_ros_bringup_param</depend>
  <depend>cloisim_ros_base</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>