<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cloisim_ros_ground_truth</name>
  <version>3.13.0</version>
  <description>world plugin to retrieve ground truth</description>
  <maintainer email="hyunseok7.yang@lge.com">Hyunseok Yang</maintainer>
  <license>MIT</license>
  <author email="hyunseok7.yang@lge.com">Hyunseok Yang</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>perception_msgs</build_depend>
  <depend>cloisim_ros_bringup_param</depend>
  <depend>cloisim_ros_base</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
