<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cloisim_ros_joint_control</name>
  <version>3.2.1</version>
  <description>joint_control package for simulator</description>
  <maintainer email="hyunseok7.yang@lge.com">Hyunseok Yang</maintainer>
  <author email="hyunseok7.yang@lge.com">Hyunseok Yang</author>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cloisim_ros_bringup_param</depend>
  <depend>cloisim_ros_base</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>control_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
