<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cloisim_ros_websocket_service</name>
  <version>4.4.0</version>
  <description>websocket service for cloisim(simulator) connection port control</description>
  <maintainer email="hyunseok7.yang@lge.com">Hyunseok Yang</maintainer>
  <license>MIT</license>
  <author email="hyunseok7.yang@lge.com">Hyunseok Yang</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libwebsocketpp-dev</depend>
  <depend>asio</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>